--- a/deconfig/jdcloud_ipq60xx_libwrt_kmod.config
+++ b/deconfig/jdcloud_ipq60xx_libwrt_kmod.config
@@ -162,7 +162,7 @@ CONFIG_PACKAGE_luci-app-lucky=y
 #CONFIG_PACKAGE_luci-app-oaf=y
 #CONFIG_PACKAGE_luci-app-quickfile=y
 # CONFIG_PACKAGE_luci-app-msd_lite is not set
-# CONFIG_PACKAGE_luci-app-samba4 is not set
+CONFIG_PACKAGE_luci-app-samba4=y
 # CONFIG_PACKAGE_luci-app-smartdns is not set
 # CONFIG_PACKAGE_luci-app-sqm is not set
 CONFIG_PACKAGE_luci-app-ttyd=y
