--- a/deconfig/jdcloud_ipq60xx_libwrt_kmod.config
+++ b/deconfig/jdcloud_ipq60xx_libwrt_kmod.config
@@ -114,6 +114,8 @@ CONFIG_PACKAGE_luci-lib-ipkg=y
 CONFIG_PACKAGE_libopenssl-legacy=y
 
 # Package
+CONFIG_PACKAGE_luci-app-passwall=y
+CONFIG_PACKAGE_sing-box=y
 CONFIG_PACKAGE_easytier=n
 CONFIG_EASYTIER_INCLUDE_WEBCONSOLE=n
 CONFIG_PACKAGE_htop=y
